--- a/tasks/jobs/pages.yml
+++ b/tasks/jobs/pages.yml
@@ -29,7 +29,7 @@
     key: $CI_COMMIT_REF_SLUG-$CI_JOB_STAGE-$CI_JOB_NAME
     policy: pull-push
   allow_failure: false
-  image: python:3.7.5
+  image: python:3.8.0
   before_script:
     - rm public -Rvf || true
     - mkdir public || true
@@ -58,7 +58,8 @@ pages:
   extends: .pages
   script:
     - "git log -1 --pretty=%B | grep -iq '\\[skip pages\\]' && (echo 'Page generation was skipped by commit message.' && exit 0)"
-    # Build staging AND master.
+
+    # Build staging AND master so we have the dev documentation and the staging documentation always together.
     - source tasks/deploy.sh
     - git fetch --all --prune
 
@@ -68,7 +69,7 @@ pages:
     - set-versions "$(python tasks/make-version-string.py staging)" || true
 
     # If staging is messed up, just ignore it...
-    - nox -r -ssphinx || true
+    - nox -r -s documentation || true
 
     - mv public staging || true
     - mkdir public || true
@@ -78,33 +79,9 @@ pages:
     - git checkout origin/master -f
     - git status
 
-    - nox -r -ssphinx
+    - nox -r -s documentation
   artifacts:
     paths:
       - public
   only:
-    # Ignore master, I added a workaround because pages were not renewing on master due to the mid-pipeline
-    # merge that takes place. The workaround reruns the staging pipeline after the merge but does not deploy
-    # to pypi, only running the pages.
-    # - master
     - staging
-
-
-pages-dry-run:
-  stage: test
-  extends: .pages
-  allow_failure: true
-  script:
-    - "git log -1 --pretty=%B | grep -iq '\\[skip pages\\]' && (echo 'Page generation was skipped by commit message.' && exit 0)"
-    - source tasks/deploy.sh
-    - set-versions "$(python tasks/make-version-string.py staging).${CI_PIPELINE_IID}"
-    - nox -ssphinx
-  artifacts:
-    paths:
-      - public
-  except:
-    - master
-    - staging
-    - tags
-    - merge-requests
-    - schedules
